--- a/public/styles.css
+++ b/public/styles.css
@@ -14,7 +14,6 @@
   img{
     width: 42px;
     display: flex;
-    
   }
   
   header {
@@ -82,22 +81,49 @@
   form {
     position: relative;
     width: 480px;
+    height: 90px;
     margin: 30px auto 20px auto;
     background: #fff;
     padding: 15px;
     border-radius: 7px;
     box-shadow: 0 1px 5px rgb(138, 137, 137);
   }
-  form input,
-  form textarea {
+  form input{
     width: 100%;
     border: none;
-    padding: 4px;
+    padding: 2px;
     outline: none;
     font-size: 1.2em;
     font-family: inherit;
     resize: none;
   }
+
+  #inputDecoration{
+    display: flex;
+    flex-direction: column;
+    width: 480px;
+    margin: 30px auto 20px auto;
+    /* visibility: hidden; */
+    padding: 15px;
+    border-radius: 7px;
+    outline: none;
+    background: #fff;
+    box-shadow: 0 1px 5px rgb(138, 137, 137);
+    border: none;
+    font-size: 0.9em;
+    font-family: inherit;
+  }
+
+  form textarea {
+    width: 100%;
+    border: none;
+    padding: 4px;
+    outline: none;
+    font-size: 0.9em;
+    font-family: inherit;
+    resize: none;
+  }
+
   form button {
     position: absolute;
     right: 18px;
@@ -112,4 +138,11 @@
     cursor: pointer;
     outline: none;
   }
-  
+
+  p.id{
+    font-size: 10px;
+  }
+
+  hr{
+    opacity: 0.3;
+  }
